Correções de responsividade

--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
             </p>
             <br>
 
-            <p class="premios">
+            <div class="premios">
               <img src="./img/financiamento-premios.png" alt="financiamento-premios.png">
-            </p>         
+            </div>         
             <br>
             <p>
               📄 Para participar do sorteio dos prêmios doe qualquer valor acima de 5 reais e <a href="https://forms.gle/XTjMv9RbTqzMCPdT8" target="_blank">preencha o formulário anexando o comprovante</a>.
